OnboardingV2Minimal/force-app/main/default/objects/Requirement_Field__c/Requirement_Field__c.object-meta.xml
<CustomObject>
    <description>Metadata for individual requirement fields; captures API name, data type, required flag, grouping, and validation linkage.</description>
    <label>Requirement Field</label>
    <nameField>
        <label>Requirement Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirement Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>