OnboardingV2Minimal/force-app/main/default/objects/Requirement_Field__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>API name used to map this requirement field to form/data sources.</description>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>