OnboardingV2Minimal/force-app/main/default/objects/Requirement_Field__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this requirement field must be provided.</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>