OnboardingV2Minimal/force-app/main/default/objects/Requirement_Field__c/fields/Requirement_Field_Group__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Field_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the field group for UI grouping and batch validation.</description>
    <label>Requirement Field Group</label>
    <referenceTo>Requirement_Field_Group__c</referenceTo>
    <relationshipLabel>Requirement Fields</relationshipLabel>
    <relationshipName>Requirement_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>