OnboardingV2Minimal/force-app/main/default/objects/Requirement_Field__c/fields/Validation_Type__c.field-meta.xml
<CustomField>
    <fullName>Validation_Type__c</fullName>
    <description>Which validation path applies (Format, Cross-Field, External, None).</description>
    <label>Validation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Format</fullName>
            </value>
            <value>
                <fullName>Cross-Field</fullName>
            </value>
            <value>
                <fullName>External (Fortza)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>